## Process this file with automake to produce Makefile.in   -*-Makefile-*-

# SUBDIRS = .

# static image files
SIMAGE_FILES = \
    screenshot-ads-clock-no-window-decorations.png \
    screenshot-ads-clock-with-window-decorations.png

pkgdocimagesdatadir = $(pkgdatadir)/doc/images

pkgdocimagesdata_DATA = $(SIMAGE_FILES)

EXTRA_DIST = $(SIMAGE_FILES)
