## Process this file with automake to produce Makefile.in   -*-Makefile-*-

# SUBDIRS = .

# static video files (or animated image files that simulate video)
SVIDEO_FILES = \
    ads-clock-screencast-001.gif \
    ads-clock-screencast-001.ogv

pkgdocvideodatadir = $(pkgdatadir)/doc/video

pkgdocvideodata_DATA = $(SVIDEO_FILES)

EXTRA_DIST = $(SVIDEO_FILES)
